--- a/index.ipynb
+++ b/index.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,8 @@
     "iteration = []\n",
     "for loop in range(n):\n",
     "    iteration.append(np.random.binomial(3, 0.8))\n",
-    "    np_it = np.array(iteration)"
+    "    np_it = np.array(iteration)\n",
+    "    "
    ]
   },
   {
