--- a/index.ipynb
+++ b/index.ipynb
@@ -261,16 +261,1028 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 0,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 0,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 0,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 0,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 0,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 3,\n",
+       " 0,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " ...]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n = 10000\n",
     "iteration = []\n",
     "for loop in range(n):\n",
     "    iteration.append(np.random.binomial(3, 0.8))\n",
     "    np_it = np.array(iteration)\n",
-    "    "
+    "\n",
+    "iteration"
    ]
   },
   {
