--- a/index.ipynb
+++ b/index.ipynb
@@ -261,1016 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 0,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 0,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 0,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 0,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 0,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 3,\n",
-       " 0,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 2,\n",
-       " 3,\n",
-       " ...]"
+       "2.4031"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +282,7 @@
     "    iteration.append(np.random.binomial(3, 0.8))\n",
     "    np_it = np.array(iteration)\n",
     "\n",
-    "iteration"
+    "sum(iteration)/n"
    ]
   },
   {
