Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "80.122"
+       "80.058"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,20 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.4031"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 10000\n",
     "iteration = []\n",
@@ -282,7 +271,7 @@
     "    iteration.append(np.random.binomial(3, 0.8))\n",
     "    np_it = np.array(iteration)\n",
     "\n",
-    "sum(iteration)/n"
+    "sum(np_it)/n"
    ]
   },
   {
